[package]
name = "shelper"
description = "CLI and lib for Sauce Labs API"
keywords = ["sauce_labs", "cli"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Max Dobeck <max.dobeck@saucelabs.com>"]
license = "MIT"
repository = "https://github.com/mdsauce/shelper"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.22"
serde_json = "1.0.41"
clap = "2.33.0"